added testControllers. code changes in additionalInfo, basicInfo and InstituteCampus line up.